--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="style.css" />
-		<link rel="stylesheet" href="/css/bootstrap.css" />
+		<!-- <link rel="stylesheet" href="/css/bootstrap" /> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  </head>
 		<title>bootstrap website</title>
 	</head>
 	<body>
 		<nav class="navbar bg-dark">
 			<div class="container-fluid">
-				<a class="navbar-brand text-white">Bititude</a>
+				<a class="navbar-brand text-white font-family">Bititude</a>
 				<form class="d-flex" role="search">
 					<input
 						class="form-control me-2"
@@ -139,11 +141,23 @@
 		<div class="container-fluid bg-dark">
 			<h1 class="text-white text-center">BITITUDE TECHNOLOGIES</h1>
 			<div class="row">
-				<div class="col-6 text-white-50">
+				<div class="col-6 text-white-50 row-font">
 					<h5>Calicut</h5>
 					<h5>Kerala</h5>
 					<h5>Email: hello@bititude.com</h5>
 					<h5>Website: www.bititude.com</h5>
+					<h5>HR: Bincy Thomas E.T</h5>
+					<div class="social-icons">
+						<a href="https://www.instagram.com/bititude/?hl=en"
+							><i class="fab fa-instagram-f" target="_blank"></i
+						></a>
+						<a href="https://www.facebook.com/bititude/"
+							><i class="fab fa-facebook-f" target="_blank"></i
+						></a>
+						<a href="https://in.linkedin.com/company/bititude-technologies"
+							><i class="fab fa-linkedin-f" target="_blank"></i
+						></a>
+					</div>
 				</div>
 				<div class="col-6">
 					<iframe
@@ -153,12 +167,11 @@
 						style="border: 0"
 						allowfullscreen=""
 						loading="lazy"
-						referrerpolicy="no-referrer-when-downgrade"></iframe
-					>`
+						referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>
 			</div>
 		</div>
 
-		<script src="/js/bootstrap.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 	</body>
 </html>
