--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<link rel="stylesheet" href="style.css" />
 		<!-- <link rel="stylesheet" href="/css/bootstrap" /> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+		<script
+			src="https://kit.fontawesome.com/c8e4d183c2.js"
+			crossorigin="anonymous"></script>
   </head>
 		<title>bootstrap website</title>
 	</head>
@@ -149,13 +152,13 @@
 					<h5>HR: Bincy Thomas E.T</h5>
 					<div class="social-icons">
 						<a href="https://www.instagram.com/bititude/?hl=en"
-							><i class="fab fa-instagram-f" target="_blank"></i
+							><i class="fab fa-instagram" target="_blank"></i
 						></a>
 						<a href="https://www.facebook.com/bititude/"
-							><i class="fab fa-facebook-f" target="_blank"></i
+							><i class="fab fa-facebook" target="_blank"></i
 						></a>
 						<a href="https://in.linkedin.com/company/bititude-technologies"
-							><i class="fab fa-linkedin-f" target="_blank"></i
+							><i class="fab fa-linkedin" target="_blank"></i
 						></a>
 					</div>
 				</div>
@@ -172,6 +175,6 @@
 			</div>
 		</div>
 
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+		
 	</body>
 </html>
